--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,17 +157,17 @@ header {
     }
 
     .projects-grid {
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         gap: 1rem;
-        padding: 0;
         width: 100%;
-        box-sizing: border-box;
     }
 
     .project-item {
-        height: 200px;
         width: 100%;
-        box-sizing: border-box;
+        max-width: 400px;
+        margin: 0 auto;
     }
 
     .project-overlay {
